# BeardedMen

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  format.sh  ogre.cfg  plugins.cfg  resources.cfg
assets/: pa.qrc
assets/mat/: Voxel.material
assets/model/: cursor.qb  dorf.qb  mark_pick.qb  mark_ramp.qb  mark_route.qb  ramp.qb  wood.qb  xyz.qb
assets/shader/: colored_blocks.frag  colored_blocks.vert  example.vert  rgb_blocks.frag  rgb_blocks.vert
lang/: localization_ru.ts
legacy/assets/model/: bearded_man.qb  boulder.qb  cursor.qb  cursor_red.qb  grass1.qb  grass2.qb  grass3.qb  mark_area.qb
legacy/assets/shader/: example.frag
legacy/gfx/: game_widget.h  gl_version.h  mesh_maker.cpp  ogl_widget.h  qb_file.cpp  qb_file.h  ramp.h
legacy/ui/: cnc_dock.cpp  log_dock.cpp  log_dock.h  main_window.h
src/: OpenGLWidget.h  OpenGLWidget.inl  base_app.cpp  base_app.h  game.cpp  game.h  gl_version.h  main.cpp  main.h  model.cpp  model.h  model_id.h  ogl_widget.h  ogl_widget.inl  ogresamples  perlin.cpp  perlin.h  qb_file.cpp  qb_file.h  util_str.h  vector.h  world.cpp  world.h  world_pager.cpp  world_pager.h  world_volume.cpp  world_volume.h
src/ai/: action.cpp  action.h  goal.cpp  goal.h  plan.cpp  plan.h
src/game/: ai_goal.cpp  ai_goal.h  block_id.h  co_body.cpp  co_body.h  co_brains.cpp  co_brains.h  co_entity.cpp  co_entity.h  co_worker.cpp  co_worker.h  component.cpp  component.h  entity.cpp  entity.h  g_defs.h  inanimate.cpp  inanimate.h  obj_bearded_man.cpp  obj_bearded_man.h  order.cpp  order.h  settlement.cpp  settlement.h  world.cpp  world.h  world_volume.cpp  world_volume.h
src/gfx/: game_widget.cpp  game_widget.h  gl_version.h  loader.cpp  loader.h  mesh_maker.cpp  mesh_maker.h  model.cpp  model.h  ogl_widget.h  ogl_widget.inl  qb_file.cpp  qb_file.h  ramp.cpp
src/tab/: t_action.cpp  t_action.h  t_block.h  t_metric.cpp  t_metric.h
src/ui/: cnc_dock.h  dock.cpp  dock.h  main_window.cpp  main_window.h
src/util/: error.h  ogre_types.h  optional.h  perlin.cpp  perlin.h  str.h  types.h  vec.cpp  vec.h
